# gazbolt-rs

./: Cargo.toml  index.html
client/: Cargo.toml  TODO.md  Trunk.toml  index.html  styles.css
client/src/: compiler.rs  config.rs  main.rs  state.rs
client/src/components/: compiler_dropdown.rs  editor_controls.rs  mod.rs  pane.rs  program_dropdown.rs  run_button.rs  text_editor.rs  util.rs
client/static/: old-styles.css
core/: Cargo.toml
core/src/: lib.rs  types.rs
examples/configs/: clang-17.toml  clang.toml  gcc-13.toml  gcc-14.toml  gcc.toml
examples/programs/clang/: array.c
examples/programs/gcc/: io.c  stdin.c
server/: Cargo.toml
server/configs/: clang.toml  gcc.toml
server/src/: api.rs  config.rs  main.rs  views.rs
src/: compiler.rs  main.rs
