[package]
name = "gazbolt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement", 
    "HtmlSelectElement", 
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Headers"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.27.1"
core = { path = "../core" }
gloo-net = "0.6.0"
once_cell = "1.21.3"
url = "2.5.4"
