[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.19.1"
toml = "0.8.20"
clap = { version = "4.5.32", features = ["derive"] }
core = { path = "../core" }
